<resources>
    <string name="app_name">Beta0.1</string>
    <string name="btn_value_main_day">Day</string>
    <string name="btn_value_main_week">Week</string>
    <string name="btn_value_main_month">Month</string>
    <string name="txt_nadpis_kategorie">Kategorie:</string>
    <string name="txt_hodnota_kategorie">none</string>
    <string name="btn_value_add_pod_kategorie">Pridat podkategorii</string>
    <string name="btn_value_subcategory_create">Vytvorit podkategorii</string>
    <string name="txt_subcategory_heading">Nazev podkategorie</string>
    <string name="txt_category_heading">Kategorie:</string>
    <string name="txt_add_record_heading">Vyberte kategorii</string>
    <string name="txt_add_record_heading_subcategory">Vyberte podkategoii</string>
    <string name="btn_add_record">Pridat casovy usek</string>
</resources>