<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casek.beta01.AktivityDetail"
    >

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kategorie_nadpis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_nadpis_kategorie" />

            <TextView
                android:id="@+id/kategorie_nadpis_hodnota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_hodnota_kategorie" />

        </LinearLayout>

        <EditText
            android:id="@+id/vypis_detailu_kategorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"

            android:layout_weight="0.58" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_add_pod_kategorie"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
