<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casek.beta01.Add_time_record">

    <Spinner
        android:id="@+id/spin_choose_category"
        android:layout_width="362dp"
        android:layout_height="52dp"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/txt_add_record_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_record_heading"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_add_time_record"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_record"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/txt_add_record_heading_subcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_record_heading_subcategory"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp" />

    <Spinner
        android:id="@+id/spin_choose_subcategory"
        android:layout_width="361dp"
        android:layout_height="52dp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="187dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="358dp"
        android:layout_height="18dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteY="346dp"
        tools:layout_editor_absoluteX="16dp" />
</android.support.constraint.ConstraintLayout>
