<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.casek.beta01.MainActivity"

    >

    <LinearLayout
        android:id="@+id/linear_main_horizontal_main"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/linear_main_vertical_btn_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btn_main_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_value_main_day"

                />

            <Button
                android:id="@+id/btn_main_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_value_main_week" />


            <Button
                android:id="@+id/btn_main_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_value_main_month" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                >

                <ImageButton
                    android:id="@+id/btn_main_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/work"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/btn_main_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/sport"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/btn_main_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/social"
                    app:srcCompat="@mipmap/ic_launcher" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_main_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/school"
                    app:srcCompat="@mipmap/ic_launcher" />


            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/btn_main_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/add_time"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
